--- a/WPFPracticeWithMVVMAndNavigation/View/ExamplePage.xaml
+++ b/WPFPracticeWithMVVMAndNavigation/View/ExamplePage.xaml
@@ -19,8 +19,12 @@
     </Grid.RowDefinitions>
     <StackPanel Orientation="Horizontal" Grid.Row="1" HorizontalAlignment="Center">
       <Button Content="{Binding ButtonText}" Command="{Binding LoadDataCommand}" Width="100" Height="25" Margin="10"/>
-      <Button Content="Go to another page" Command="{Binding GoToAnotherPageCommand}" Width="100" Height="25" Margin="10"/>
+      <Button Content="Go to another page" Command="{Binding GoToAnotherPageCommand}" Width="120" Height="25" Margin="10"/>
     </StackPanel>
-    <TextBlock Text="{Binding Data, Mode=TwoWay}" Width="500" Height="100" Grid.Row="2" Background="White" Foreground="Black"/>
+    <TextBlock
+      Text="{Binding Data, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+      Width="500" Height="100"
+      Grid.Row="2"
+      Background="White"/>
   </Grid>
 </Page>
