--- a/WPFPracticeWithMVVMAndNavigation/App.xaml
+++ b/WPFPracticeWithMVVMAndNavigation/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="WPFPracticeWithMVVMAndNavigation.App"
+﻿<Application x:Class="WPFAppTemplate.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WPFPracticeWithMVVMAndNavigation">
+             xmlns:local="clr-namespace:WPFAppTemplate">
     <Application.Resources>
          
     </Application.Resources>
