--- a/WPFPracticeWithMVVMAndNavigation/View/ExamplePage.xaml
+++ b/WPFPracticeWithMVVMAndNavigation/View/ExamplePage.xaml
@@ -1,10 +1,10 @@
-﻿<Page x:Class="WPFPracticeWithMVVMAndNavigation.View.ExamplePage"
+﻿<Page x:Class="WPFAppTemplate.View.ExamplePage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:WPFPracticeWithMVVMAndNavigation.View"
-      xmlns:viewmodel="clr-namespace:WPFPracticeWithMVVMAndNavigation.ViewModel"
+      xmlns:local="clr-namespace:WPFAppTemplate.View"
+      xmlns:viewmodel="clr-namespace:WPFAppTemplate.ViewModel"
       d:DataContext="{d:DesignInstance Type=viewmodel:ExampleViewModel}"
       mc:Ignorable="d"
       Background="LightGreen"
