--- a/WPFAppTemplate/App.xaml
+++ b/WPFAppTemplate/App.xaml
@@ -1,8 +1,37 @@
 ﻿<Application x:Class="WPFAppTemplate.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WPFAppTemplate">
-    <Application.Resources>
-         
-    </Application.Resources>
+             xmlns:local="clr-namespace:WPFAppTemplate"
+             xmlns:converters="clr-namespace:WPFAppTemplate.Converters">
+  <Application.Resources>
+    <converters:BooleanToVisibilityConverter x:Key="booleanToVisibilityConverter"/>
+    <converters:InverseBooleanConverter x:Key="inverseBooleanConverter"/>
+    
+    <!--Examples of how to define resources-->
+    <!--<FontFamily x:Key="StarJedi">pack://application:,,,/Fonts/#Star Jedi</FontFamily>
+    <SolidColorBrush x:Key="ButtonBackground" Color="Goldenrod"/>
+    <SolidColorBrush x:Key="ButtonForeground" Color="White"/>
+    <SolidColorBrush x:Key="BackgroundColor" Color="Black"/>
+    <SolidColorBrush x:Key="ForegroundColor" Color="White"/>
+    <SolidColorBrush x:Key="ErrorTextColor" Color="Red"/>
+
+    <Style
+      x:Key="ButtonWithOnHoverBackgroundRemoved"
+      TargetType="Button">
+      <Setter
+        Property="Background"
+        Value="Transparent"/>
+      <Setter
+        Property="Template">
+        <Setter.Value>
+          <ControlTemplate TargetType="Button">
+            <Grid Background="{TemplateBinding Background}">
+              <ContentPresenter/>
+            </Grid>
+          </ControlTemplate>
+        </Setter.Value>
+      </Setter>
+    </Style>-->
+    
+  </Application.Resources>
 </Application>
